# replaybrowser

./: README.md  TODO.md  migration.sql
python/: 3rax_vs_4gateblink  README.md  entity_names  find_proxy_hatch_replays.py  lib.py  lookup_build.py  model.py  populate_db.py  pyproject.toml  search_for_replays.py
replays/cheeseadelphia_winter_championship_2021/Group H/: uwuThermal, Namshar Pillars of Gold LE.SC2Replay
replays/cheeseadelphia_winter_championship_2021/Ro8/Astrea vs Zoun/: Astrea, Zoun Lightshade LE.SC2Replay  Astrea, Zoun Romanticide LE.SC2Replay
replays/cheeseadelphia_winter_championship_2021/Ro8/Solar vs Ragnarok/: Solar, RAGNAROK Lightshade LE.SC2Replay
replays/dreamhack_sc2_masters_2021_last_chance/Main Event/Playoffs/Grand Finals/: G1 - Pillars of Gold LE.SC2Replay  G2 - Jagannatha LE.SC2Replay  G3 - Romanticide LE.SC2Replay
replays/stayathome_story_cup_3/Group Stage 2/Group A/Serral vs. INnoVation/: 01 - Pillars of Gold.SC2Replay  (+1 more)
replays/teamliquid_starleague_6/Grand Finals/: serral vs dark g1.SC2Replay  serral vs dark g2.SC2Replay  serral vs dark g3.SC2Replay  serral vs dark g4.SC2Replay
replays/teamliquid_starleague_6/Lower Bracket/LB R2/: Stats vs Zest G2-2.SC2Replay
replays/teamliquid_starleague_6/Upper Bracket/UB R2/: Maru vs Parting G5.SC2Replay  Ragnarok vs Zest G4.SC2Replay  Ragnarok vs Zest G5.SC2Replay
replays/teamliquid_starleague_7/Losers Finals/: Zest VS Trap Game 2.SC2Replay  Zest VS Trap Game 3.SC2Replay
replays/teamliquid_starleague_7/Quarterfinals/Quarterfinals Match 3/: Reynor VS Dark Game 2.SC2Replay
(+186 files in other folders)
