[tool.poetry]
name = "replaybrowser"
version = "0.1.0"
description = ""
authors = ["Darren Yin <darren.yin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ipython = "^7.25.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
