[tool.poetry]
name = "replaybrowser"
version = "0.1.0"
description = ""
authors = ["Darren Yin <darren.yin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ipython = "^7.25.0"
mpyq = "^0.2.5"
s2protocol = "^5.0.7"
SQLAlchemy = "^1.4.22"
psycopg2 = "^2.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
